--- a/create.html
+++ b/create.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="create-styles.css">
     </head>
     <body>
         <header>
@@ -22,7 +22,6 @@
             </ul>
         </header>
         <main>
-            <!--use css to make it a table row a column-->
             <table>
                 <tr>
                     <td>
@@ -57,7 +56,7 @@
                 </svg>
             </div>
             <div>
-                <button type="button">Save Pallete</button>
+                <button type="button" class="btn btn-primary my-button">Save Pallete</button>
             </div>
         </main>
         <footer>
