--- a/following.html
+++ b/following.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="following-styles.css">
     </head>
     <body>
         <header>
@@ -26,50 +26,47 @@
                 You:
                 <span class="username">I-am-the-current-player</span>
             </div>
-            <br>
             <table class="following-list">
                 <tr class="username"><th>FRIEND</th></tr>
                 <tr class="username">
                     <td>USERNAME1</td>
-                    <td><button type="button">unfollow</button></td>
+                    <td><button type="button" class="btn btn-primary my-button">unfollow</button></td>
                 </tr>
                 <tr class="username">
                     <td>USERNAME2</td>
-                    <td><button type="button">unfollow</button></td>
+                    <td><button type="button" class="btn btn-primary my-button">unfollow</button></td>
                 </tr>
                 <tr class="username">
                     <td>USERNAME3</td>
-                    <td><button type="button">unfollow</button></td>
+                    <td><button type="button" class="btn btn-primary my-button">unfollow</button></td>
                 </tr>
-            </table>
-            <br>            
-            <div>
-                <input type="email" placeholder="name@email.com">
-                <button type="button">add friend</button>
-            </div>
-            <br>
-            <br>
+            </table>       
+            
+            <form action="">
+                <input type="email" class="form-control" placeholder="example@email.com">
+                <span><button type="button" class="btn btn-primary my-button">add friend</button></span>
+            </form>
             <table class="notification">
                 <tr><th>NOTIFICATIONS</th></tr>
                 <tr class="username"> 
                     <td>
                         USERNAME1 made a new pallete! add to collection?
-                        <button type="button">remove</button>
-                        <button>add</button>
+                        <button type="submit" class="btn btn-secondary">remove</button>
+                        <button type="button" class="btn btn-primary my-button">add</button>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         USERNAME2 made a new pallete! add to collection?
-                        <button type="button">remove</button>
-                        <button>add</button>
+                        <button type="submit" class="btn btn-secondary">remove</button>
+                        <button type="button" class="btn btn-primary my-button">add</button>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         USERNAME1 made a new pallete! add to collection?
-                        <button type="button">remove</button>
-                        <button>add</button>
+                        <button type="submit" class="btn btn-secondary">remove</button>
+                        <button type="button" class="btn btn-primary my-button">add</button>
                     </td>
                 </tr>
             </table>
