--- a/palletes.html
+++ b/palletes.html
@@ -26,7 +26,7 @@
             </ul>
         </header>
         <main class="main-container">
-            <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -39,7 +39,7 @@
                     <button type="button" class="btn btn-secondary">remove</button>
                 </div>
             </div>
-                        <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -52,7 +52,7 @@
                     <button type="button" class="btn btn-secondary">remove</button>
                 </div>
             </div>
-                        <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -65,7 +65,7 @@
                     <button type="button" class="btn btn-secondary">remove</button>
                 </div>
             </div>
-                        <div class="container">
+             <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -78,7 +78,7 @@
                     <button type="button" class="btn btn-secondary">remove</button>
                 </div>
             </div>
-                        <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -91,7 +91,7 @@
                     <button type="button" class="btn btn-secondary">remove</button>
                 </div>
             </div>
-                        <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -104,7 +104,7 @@
                     <button type="button" class="btn btn-secondary">remove</button>
                 </div>
             </div>
-                        <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -117,7 +117,7 @@
                     <button type="button" class="btn btn-secondary">remove</button>
                 </div>
             </div>
-                        <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
